crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__all_unused_cold.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core early\\n{}\\n--- core after ANF\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(early), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#2 : int -> int = \x#1 : int -> trace "body" in 21 in
case@Bool true of
  True -> 42
  False -> helper#2 1
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_2
    (case (con bool True) [helper_2 (con integer 1)] (con integer 42)))
    (lam x_1
      (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))]))])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
let helper#2 : int -> int = \x#1 : int -> trace "body" in 21 in
case@Bool true of
  True -> 42
  False -> helper#2 1
--- core early
let helper#2 : @delay int = delay (trace "body" in 21) in
case@Bool true of
  True -> 42
  False -> force helper#2
--- core after ANF
let helper#2 : @delay int = delay (trace "body" in 21) in
case@Bool true of
  True -> 42
  False -> force helper#2
--- uplc before
(program 1.1.0
  [(lam helper_2
    (case (con bool True) [helper_2 (con integer 1)] (con integer 42)))
    (lam x_1
      (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))]))])
--- uplc after
(program 1.1.0
  [(lam helper_2 (case (con bool True) (force helper_2) (con integer 42)))
    (delay
      (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))]))])
--- result
(con integer 42)
--- logs
[]
