crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__all_unused_failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core early\\n{}\\n--- core after ANF\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(early), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let allUnused#4 : int -> int = \unused#1 : int -> trace "unreachable" in 42 in
allUnused#4 error
--- unoptimized UPLC
(program 1.1.0
  [(lam allUnused_4 [allUnused_4 (error)])
    (lam unused_1
      (force
        [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 42))]))])
--- optimized Core
let arg#4 : int = error in
trace "unreachable" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam arg_1
      (force [[builtin_2 (con string "unreachable")] (delay (con integer 42))]))
      (error)])
    (force (builtin trace))])
--- isolated pass
--- core before
let allUnused#4 : int -> int = \unused#1 : int -> trace "unreachable" in 42 in
allUnused#4 error
--- core early
let allUnused#4 : @delay int = delay (trace "unreachable" in 42) in
let arg#2 : int = error in
force allUnused#4
--- core after ANF
let allUnused#4 : @delay int = delay (trace "unreachable" in 42) in
let arg#2 : int = error in
force allUnused#4
--- uplc before
(program 1.1.0
  [(lam allUnused_4 [allUnused_4 (error)])
    (lam unused_1
      (force
        [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 42))]))])
--- uplc after
(program 1.1.0
  [(lam allUnused_4 [(lam arg_2 (force allUnused_4)) (error)])
    (delay
      (force
        [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 42))]))])
--- result
error: ExplicitErrorTerm
--- logs
[]
