crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__captured_parameter.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core early\\n{}\\n--- core after ANF\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(early), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#4 : int -> int -> int -> int = \same#1 : int same#2 : int -> \same#3 : int -> same#1 in
helper#4 42 0 7
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_4 [[[helper_4 (con integer 42)] (con integer 0)] (con integer 7)])
    (lam same_1 (lam same_2 (lam same_3 same_1)))])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
let helper#4 : int -> int -> int -> int = \same#1 : int same#2 : int -> \same#3 : int -> same#1 in
helper#4 42 0 7
--- core early
let helper#4 : int -> int -> int = \same#1 : int -> \same#3 : int -> same#1 in
helper#4 42 7
--- core after ANF
let helper#4 : int -> int -> int = \same#1 : int -> \same#3 : int -> same#1 in
let anf#2 : int -> int = helper#4 42 in
anf#2 7
--- uplc before
(program 1.1.0
  [(lam helper_4 [[[helper_4 (con integer 42)] (con integer 0)] (con integer 7)])
    (lam same_1 (lam same_2 (lam same_3 same_1)))])
--- uplc after
(program 1.1.0
  [(lam helper_4 [(lam anf_2 [anf_2 (con integer 7)]) [helper_4 (con integer 42)]])
    (lam same_1 (lam same_3 same_1))])
--- result
(con integer 42)
--- logs
[]
