crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__cold_arguments.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
assertion_line: 37
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core early\\n{}\\n--- core after ANF\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(early), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#3 : int -> int -> int = \x#1 : int y#2 : int -> trace "body" in 21 in
case@Bool true of
  True -> 42
  False -> helper#3 (trace "a" in 1) (trace "b" in 2)
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_3
    (case
      (con bool True)
      [[helper_3
        (force [[(force (builtin trace)) (con string "a")] (delay (con integer 1))])]
        (force [[(force (builtin trace)) (con string "b")] (delay (con integer 2))])]
      (con integer 42)))
    (lam x_1
      (lam y_2
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
let helper#3 : int -> int -> int = \x#1 : int y#2 : int -> trace "body" in 21 in
case@Bool true of
  True -> 42
  False -> helper#3 (trace "a" in 1) (trace "b" in 2)
--- core early
let helper#3 : @delay int = delay (trace "body" in 21) in
case@Bool true of
  True -> 42
  False -> let arg#4 : int = trace "a" in 1 in
  let arg#5 : int = trace "b" in 2 in
  force helper#3
--- core after ANF
let helper#3 : @delay int = delay (trace "body" in 21) in
case@Bool true of
  True -> 42
  False -> let arg#4 : int = trace "a" in 1 in
  let arg#5 : int = trace "b" in 2 in
  force helper#3
--- uplc before
(program 1.1.0
  [(lam helper_3
    (case
      (con bool True)
      [[helper_3
        (force [[(force (builtin trace)) (con string "a")] (delay (con integer 1))])]
        (force [[(force (builtin trace)) (con string "b")] (delay (con integer 2))])]
      (con integer 42)))
    (lam x_1
      (lam y_2
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))])
--- uplc after
(program 1.1.0
  [(lam helper_3
    (case
      (con bool True)
      [(lam arg_4
        [(lam arg_5 (force helper_3))
          (force [[(force (builtin trace)) (con string "b")] (delay (con integer 2))])])
        (force [[(force (builtin trace)) (con string "a")] (delay (con integer 1))])]
      (con integer 42)))
    (delay
      (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))]))])
--- result
(con integer 42)
--- logs
[]
