crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__drop_first.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
assertion_line: 37
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core early\\n{}\\n--- core after ANF\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(early), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#4 : int -> int -> int -> int = \p#1 : int p#2 : int p#3 : int -> trace "body" in addInteger p#2 p#3 in
helper#4 (trace "a" in 10) (trace "b" in 20) (trace "c" in 30)
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_4
    [[[helper_4
      (force [[(force (builtin trace)) (con string "a")] (delay (con integer 10))])]
      (force [[(force (builtin trace)) (con string "b")] (delay (con integer 20))])]
      (force [[(force (builtin trace)) (con string "c")] (delay (con integer 30))])])
    (lam p_1
      (lam p_2
        (lam p_3
          (force
            [[(force (builtin trace)) (con string "body")]
              (delay [[(builtin addInteger) p_2] p_3])]))))])
--- optimized Core
let arg#9 : int = trace "a" in 10 in
let arg#10 : int = trace "b" in 20 in
let arg#11 : int = trace "c" in 30 in
trace "body" in addInteger arg#10 arg#11
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam arg_1
      [(lam arg_2
        [(lam arg_3
          (force
            [[builtin_4 (con string "body")] (delay [[(builtin addInteger) arg_2] arg_3])]))
          (force [[builtin_4 (con string "c")] (delay (con integer 30))])])
        (force [[builtin_4 (con string "b")] (delay (con integer 20))])])
      (force [[builtin_4 (con string "a")] (delay (con integer 10))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let helper#4 : int -> int -> int -> int = \p#1 : int p#2 : int p#3 : int -> trace "body" in addInteger p#2 p#3 in
helper#4 (trace "a" in 10) (trace "b" in 20) (trace "c" in 30)
--- core early
let helper#4 : int -> int -> int = \p#2 : int p#3 : int -> trace "body" in addInteger p#2 p#3 in
let arg#5 : int = trace "a" in 10 in
let arg#6 : int = trace "b" in 20 in
let arg#7 : int = trace "c" in 30 in
helper#4 arg#6 arg#7
--- core after ANF
let helper#4 : int -> int -> int = \p#2 : int p#3 : int -> trace "body" in addInteger p#2 p#3 in
let arg#5 : int = trace "a" in 10 in
let arg#6 : int = trace "b" in 20 in
let arg#7 : int = trace "c" in 30 in
helper#4 arg#6 arg#7
--- uplc before
(program 1.1.0
  [(lam helper_4
    [[[helper_4
      (force [[(force (builtin trace)) (con string "a")] (delay (con integer 10))])]
      (force [[(force (builtin trace)) (con string "b")] (delay (con integer 20))])]
      (force [[(force (builtin trace)) (con string "c")] (delay (con integer 30))])])
    (lam p_1
      (lam p_2
        (lam p_3
          (force
            [[(force (builtin trace)) (con string "body")]
              (delay [[(builtin addInteger) p_2] p_3])]))))])
--- uplc after
(program 1.1.0
  [(lam helper_4
    [(lam arg_5
      [(lam arg_6
        [(lam arg_7 [[helper_4 arg_6] arg_7])
          (force [[(force (builtin trace)) (con string "c")] (delay (con integer 30))])])
        (force [[(force (builtin trace)) (con string "b")] (delay (con integer 20))])])
      (force [[(force (builtin trace)) (con string "a")] (delay (con integer 10))])])
    (lam p_2
      (lam p_3
        (force
          [[(force (builtin trace)) (con string "body")]
            (delay [[(builtin addInteger) p_2] p_3])])))])
--- result
(con integer 50)
--- logs
["a", "b", "c", "body"]
